--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ label.title=Title
 label.job.description=Job Description
 label.salary.range=Salary Range
 label.action=Action
+label.add.designation=Add Designation
