--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,13 @@
 label.designation.page.title=ERP :: Designations
 label.designation=Designation
 label.numbers=#
+label.username=Username
 label.title=Title
 label.job.description=Job Description
 label.salary.range=Salary Range
-label.action=Action
 label.add.designation=Add Designation
+
+label.company.profile=Company Profile
+label.view.details=View Details
+btn.edit=Edit
+btn.create=Create
