Updated Maks tint color and necessary changes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ label.title=Title
 label.job.description=Job Description
 label.salary.range=Salary Range
 label.add.designation=Add Designation
+label.action=Action
 
 label.company.profile=Company Profile
 label.view.details=View Details
