Added Category section

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,10 @@ label.company.profile=Company Profile
 label.view.details=View Details
 btn.edit=Edit
 btn.create=Create
+
+# Category
+label.product.category.page.title=ERP :: Category
+label.product.category=Categories
+label.product.category.table.header.title=Title
+label.product.category.table.header.description=Description
+label.product.add.category=Add Category
