--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,9 @@ label.product.category=Categories
 label.product.category.table.header.title=Title
 label.product.category.table.header.description=Description
 label.product.add.category=Add Category
+
+#Product
+label.product=Products
+label.product.title=Title
+label.product.quantity=Quantity
+label.product.price=Price
