--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,4 +24,6 @@ label.product.add.category=Add Category
 label.product=Products
 label.product.title=Title
 label.product.quantity=Quantity
+label.product.code=Product Code
+label.product.category.title=Category
 label.product.price=Price
