Added logged in user name to navbar fragment

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,3 +27,6 @@ label.product.quantity=Quantity
 label.product.code=Product Code
 label.product.category.title=Category
 label.product.price=Price
+
+#Company profile
+label.edit.company.profile=Edit Company Profile
